<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Câu hỏi 1"
        android:layout_gravity="center_horizontal"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <LinearLayout
            android:id="@+id/lnA"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_select_question"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:text="A"
                android:textSize="18sp"
                android:padding="10dp"
                android:gravity="center"
                android:textColor="@drawable/bg_text_color_question"
                />
            <View
                android:id="@+id/viewA"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorBackground"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_khong_co_trieu_chung"
                android:textColor="@drawable/bg_text_color_question"
                android:textSize="18sp"
                android:padding="10dp"
                />
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>
        <LinearLayout
            android:id="@+id/lnB"
            android:layout_width="match_parent"
            android:background="@drawable/bg_select_question"
            android:orientation="horizontal"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:text="B"
                android:textSize="18sp"
                android:padding="10dp"
                android:gravity="center"
                android:textColor="@drawable/bg_text_color_question"
                />
            <View
                android:id="@+id/viewB"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorBackground"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_cham_chich"
                android:textSize="18sp"
                android:padding="10dp"
                android:textColor="@drawable/bg_text_color_question"
                />
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>
        <LinearLayout
            android:id="@+id/lnC"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_select_question"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:text="C"
                android:textSize="18sp"
                android:padding="10dp"
                android:gravity="center"
                android:textColor="@drawable/bg_text_color_question"
                />
            <View
                android:id="@+id/viewC"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorBackground"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_rat"
                android:textSize="18sp"
                android:padding="10dp"
                android:textColor="@drawable/bg_text_color_question"
                />
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>
        <LinearLayout
            android:id="@+id/lnD"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_select_question"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:text="D"
                android:textSize="18sp"
                android:padding="10dp"
                android:gravity="center"
                android:textColor="@drawable/bg_text_color_question"
                />
            <View
                android:id="@+id/viewD"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorBackground"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_dau"
                android:textSize="18sp"
                android:padding="10dp"
                android:textColor="@drawable/bg_text_color_question"
                />
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>
        <LinearLayout
            android:id="@+id/lnE"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_select_question"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:text="E"
                android:textSize="18sp"
                android:padding="10dp"
                android:gravity="center"
                android:textColor="@drawable/bg_text_color_question"
                />
            <View
                android:id="@+id/viewE"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorBackground"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_ngua"
                android:textSize="18sp"
                android:padding="10dp"
                android:textColor="@drawable/bg_text_color_question"
                />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_back"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            />
        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/next"
            android:textColor="@color/color_text"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_button_next"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:visibility="visible"
            />
    </RelativeLayout>

</LinearLayout>